--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  03/18/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'nor_sdram'
-compiling peripherals.c...
+compiling ble_protocol.c...
 linking...
-Program Size: Code=95204 RO-data=8384 RW-data=904 ZI-data=2294004  
+Program Size: Code=98124 RO-data=8384 RW-data=908 ZI-data=2294004  
 FromELF: creating hex file...
 After Build - User command #1: fromelf --bin ".\Objects\rt1052.axf" --output ".\Objects\rt1052.bin"
 ".\Objects\rt1052.axf" - 0 Error(s), 0 Warning(s).
@@ -125,16 +125,16 @@ Package Vendor: NXP
       Include file:  Source\include\FreeRTOS.h
       Include file:  Source\include\queue.h
       Include file:  Source\include\semphr.h
-      Source file:   Source\queue.c
-      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
       Include file:  Source\include\task.h
       Source file:   Source\tasks.c
+      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
       Source file:   Source\list.c
+      Source file:   Source\queue.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
 
    * Component: ARM.FreeRTOS::RTOS:Coroutines:10.2.0
-      Include file:  Source\include\croutine.h
       Source file:   Source\croutine.c
+      Include file:  Source\include\croutine.h
 
    * Component: ARM.FreeRTOS::RTOS:Event Groups:10.2.0
       Include file:  Source\include\event_groups.h
@@ -158,21 +158,21 @@ Package Vendor: NXP
    * Component: ARM::CMSIS:CORE:5.3.0
 
    * Component: ARM::CMSIS:RTOS2:FreeRTOS:10.2.0
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
 
    * Component: NXP::Device:SDK Drivers:adc_12b1msps_sar:2.0.2
       Source file:   drivers\fsl_adc.c
       Include file:  drivers\fsl_adc.h
 
    * Component: NXP::Device:SDK Drivers:adc_etc:2.0.1
-      Include file:  drivers\fsl_adc_etc.h
       Source file:   drivers\fsl_adc_etc.c
+      Include file:  drivers\fsl_adc_etc.h
 
    * Component: NXP::Device:SDK Drivers:clock:2.1.0
-      Source file:   drivers\fsl_clock.c
       Include file:  drivers\fsl_clock.h
+      Source file:   drivers\fsl_clock.c
 
    * Component: NXP::Device:SDK Drivers:common:2.1.0
       Source file:   drivers\fsl_common.c
@@ -183,12 +183,12 @@ Package Vendor: NXP
       Include file:  drivers\fsl_dcdc.h
 
    * Component: NXP::Device:SDK Drivers:dmamux:2.0.2
-      Include file:  drivers\fsl_dmamux.h
       Source file:   drivers\fsl_dmamux.c
+      Include file:  drivers\fsl_dmamux.h
 
    * Component: NXP::Device:SDK Drivers:edma:2.1.8
-      Include file:  drivers\fsl_edma.h
       Source file:   drivers\fsl_edma.c
+      Include file:  drivers\fsl_edma.h
 
    * Component: NXP::Device:SDK Drivers:flexspi:2.1.1
       Include file:  drivers\fsl_flexspi.h
@@ -203,15 +203,15 @@ Package Vendor: NXP
       Source file:   drivers\fsl_gpt.c
 
    * Component: NXP::Device:SDK Drivers:i2c:2.1.9
-      Source file:   drivers\fsl_lpi2c.c
       Include file:  drivers\fsl_lpi2c.h
+      Source file:   drivers\fsl_lpi2c.c
 
    * Component: NXP::Device:SDK Drivers:iomuxc:2.0.0
       Include file:  drivers\fsl_iomuxc.h
 
    * Component: NXP::Device:SDK Drivers:lists:1.0.0
-      Include file:  components\lists\generic_list.h
       Source file:   components\lists\generic_list.c
+      Include file:  components\lists\generic_list.h
 
    * Component: NXP::Device:SDK Drivers:lpspi:2.0.3
       Source file:   drivers\fsl_lpspi.c
@@ -226,12 +226,12 @@ Package Vendor: NXP
       Include file:  drivers\fsl_lpuart.h
 
    * Component: NXP::Device:SDK Drivers:lpuart_adapter:1.0.0
-      Include file:  components\uart\uart.h
       Source file:   components\uart\lpuart_adapter.c
+      Include file:  components\uart\uart.h
 
    * Component: NXP::Device:SDK Drivers:lpuart_edma:2.2.7
-      Source file:   drivers\fsl_lpuart_edma.c
       Include file:  drivers\fsl_lpuart_edma.h
+      Source file:   drivers\fsl_lpuart_edma.c
 
    * Component: NXP::Device:SDK Drivers:pit:2.0.2
       Include file:  drivers\fsl_pit.h
@@ -272,29 +272,29 @@ Package Vendor: NXP
       Source file:   utilities\debug_console\fsl_debug_console.c
       Include file:  utilities\debug_console\fsl_debug_console.h
       Include file:  utilities\str\fsl_str.h
-      Source file:   utilities\str\fsl_str.c
       Include file:  utilities\debug_console\fsl_debug_console_conf.h
+      Source file:   utilities\str\fsl_str.c
 
    * Component: NXP::Device:SDK Utilities:notifier:1.0.0
       Source file:   utilities\fsl_notifier.c
       Include file:  utilities\fsl_notifier.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager:1.0.0
-      Source file:   components\serial_manager\serial_manager.c
       Include file:  components\serial_manager\serial_port_internal.h
+      Source file:   components\serial_manager\serial_manager.c
       Include file:  components\serial_manager\serial_manager.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager_uart:1.0.0
-      Source file:   components\serial_manager\serial_port_uart.c
       Include file:  components\serial_manager\serial_port_uart.h
+      Source file:   components\serial_manager\serial_port_uart.c
 
    * Component: NXP::Device:SDK Utilities:shell:1.0.0
-      Include file:  utilities\fsl_shell.h
       Source file:   utilities\fsl_shell.c
+      Include file:  utilities\fsl_shell.h
 
    * Component: NXP::Device:Startup:MIMXRT1052_startup:1.0.0
-      Include file:  MIMXRT1052.h
       Source file:   arm\startup_MIMXRT1052.s
+      Include file:  MIMXRT1052.h
       Include file:  MIMXRT1052_features.h
       Include file:  fsl_device_registers.h
       Source file:   system_MIMXRT1052.c
