--- a/Objects/rt1052.build_log.htm
+++ b/Objects/rt1052.build_log.htm
@@ -21,15 +21,34 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
 Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
-C:\Users\ningjw\Desktop\RT1052\rt1052.uvprojx
-Project File Date:  03/18/2020
+C:\Users\ningjw\Desktop\RT1052 - ¸±±¾\rt1052.uvprojx
+Project File Date:  03/28/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'nor_sdram'
+compiling norflash_app.c...
+compiling interrupt.c...
+compiling ble_app.c...
+compiling battery_app.c...
+compiling main.c...
+compiling led_app.c...
+compiling adc_app.c...
 compiling ble_protocol.c...
+compiling core_delay.c...
+compiling rtc_drv.c...
+compiling emmc_drv.c...
+compiling norflash_drv.c...
+compiling iic_temp_drv.c...
+compiling battery_drv.c...
+compiling adc_drv.c...
+compiling utility.c...
+compiling fsl_sdmmc_common.c...
+compiling fsl_sdmmc_host.c...
+compiling fsl_mmc_disk.c...
+compiling fsl_mmc.c...
 linking...
-Program Size: Code=98124 RO-data=8384 RW-data=908 ZI-data=2294004  
+Program Size: Code=98180 RO-data=8384 RW-data=908 ZI-data=2454004  
 FromELF: creating hex file...
 After Build - User command #1: fromelf --bin ".\Objects\rt1052.axf" --output ".\Objects\rt1052.bin"
 ".\Objects\rt1052.axf" - 0 Error(s), 0 Warning(s).
@@ -123,18 +142,18 @@ Package Vendor: NXP
 
    * Component: ARM.FreeRTOS::RTOS:Core:Cortex-M:10.2.0
       Include file:  Source\include\FreeRTOS.h
+      Source file:   Source\list.c
+      Source file:   Source\tasks.c
       Include file:  Source\include\queue.h
+      Source file:   Source\queue.c
+      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
       Include file:  Source\include\semphr.h
       Include file:  Source\include\task.h
-      Source file:   Source\tasks.c
-      Source file:   Source\portable\RVDS\ARM_CM7\r0p1\port.c
-      Source file:   Source\list.c
-      Source file:   Source\queue.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\freertos_evr.c
 
    * Component: ARM.FreeRTOS::RTOS:Coroutines:10.2.0
-      Source file:   Source\croutine.c
       Include file:  Source\include\croutine.h
+      Source file:   Source\croutine.c
 
    * Component: ARM.FreeRTOS::RTOS:Event Groups:10.2.0
       Include file:  Source\include\event_groups.h
@@ -158,9 +177,9 @@ Package Vendor: NXP
    * Component: ARM::CMSIS:CORE:5.3.0
 
    * Component: ARM::CMSIS:RTOS2:FreeRTOS:10.2.0
-      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\cmsis_os2.c
       Source file:   CMSIS\RTOS2\FreeRTOS\Source\ARM\clib_arm.c
+      Source file:   CMSIS\RTOS2\FreeRTOS\Source\os_systick.c
 
    * Component: NXP::Device:SDK Drivers:adc_12b1msps_sar:2.0.2
       Source file:   drivers\fsl_adc.c
@@ -171,8 +190,8 @@ Package Vendor: NXP
       Include file:  drivers\fsl_adc_etc.h
 
    * Component: NXP::Device:SDK Drivers:clock:2.1.0
-      Include file:  drivers\fsl_clock.h
       Source file:   drivers\fsl_clock.c
+      Include file:  drivers\fsl_clock.h
 
    * Component: NXP::Device:SDK Drivers:common:2.1.0
       Source file:   drivers\fsl_common.c
@@ -187,51 +206,51 @@ Package Vendor: NXP
       Include file:  drivers\fsl_dmamux.h
 
    * Component: NXP::Device:SDK Drivers:edma:2.1.8
-      Source file:   drivers\fsl_edma.c
       Include file:  drivers\fsl_edma.h
+      Source file:   drivers\fsl_edma.c
 
    * Component: NXP::Device:SDK Drivers:flexspi:2.1.1
-      Include file:  drivers\fsl_flexspi.h
       Source file:   drivers\fsl_flexspi.c
+      Include file:  drivers\fsl_flexspi.h
 
    * Component: NXP::Device:SDK Drivers:gpio:2.0.2
-      Include file:  drivers\fsl_gpio.h
       Source file:   drivers\fsl_gpio.c
+      Include file:  drivers\fsl_gpio.h
 
    * Component: NXP::Device:SDK Drivers:gpt:2.0.0
       Include file:  drivers\fsl_gpt.h
       Source file:   drivers\fsl_gpt.c
 
    * Component: NXP::Device:SDK Drivers:i2c:2.1.9
-      Include file:  drivers\fsl_lpi2c.h
       Source file:   drivers\fsl_lpi2c.c
+      Include file:  drivers\fsl_lpi2c.h
 
    * Component: NXP::Device:SDK Drivers:iomuxc:2.0.0
       Include file:  drivers\fsl_iomuxc.h
 
    * Component: NXP::Device:SDK Drivers:lists:1.0.0
-      Source file:   components\lists\generic_list.c
       Include file:  components\lists\generic_list.h
+      Source file:   components\lists\generic_list.c
 
    * Component: NXP::Device:SDK Drivers:lpspi:2.0.3
-      Source file:   drivers\fsl_lpspi.c
       Include file:  drivers\fsl_lpspi.h
+      Source file:   drivers\fsl_lpspi.c
 
    * Component: NXP::Device:SDK Drivers:lpspi_edma:2.0.2
-      Include file:  drivers\fsl_lpspi_edma.h
       Source file:   drivers\fsl_lpspi_edma.c
+      Include file:  drivers\fsl_lpspi_edma.h
 
    * Component: NXP::Device:SDK Drivers:lpuart:2.2.7
       Source file:   drivers\fsl_lpuart.c
       Include file:  drivers\fsl_lpuart.h
 
    * Component: NXP::Device:SDK Drivers:lpuart_adapter:1.0.0
-      Source file:   components\uart\lpuart_adapter.c
       Include file:  components\uart\uart.h
+      Source file:   components\uart\lpuart_adapter.c
 
    * Component: NXP::Device:SDK Drivers:lpuart_edma:2.2.7
-      Include file:  drivers\fsl_lpuart_edma.h
       Source file:   drivers\fsl_lpuart_edma.c
+      Include file:  drivers\fsl_lpuart_edma.h
 
    * Component: NXP::Device:SDK Drivers:pit:2.0.2
       Include file:  drivers\fsl_pit.h
@@ -246,20 +265,20 @@ Package Vendor: NXP
       Include file:  drivers\fsl_qtmr.h
 
    * Component: NXP::Device:SDK Drivers:sdhc:2.2.8
-      Include file:  drivers\fsl_usdhc.h
       Source file:   drivers\fsl_usdhc.c
+      Include file:  drivers\fsl_usdhc.h
 
    * Component: NXP::Device:SDK Drivers:snvs_hp:2.1.2
-      Include file:  drivers\fsl_snvs_hp.h
       Source file:   drivers\fsl_snvs_hp.c
+      Include file:  drivers\fsl_snvs_hp.h
 
    * Component: NXP::Device:SDK Drivers:snvs_lp:2.1.0
-      Include file:  drivers\fsl_snvs_lp.h
       Source file:   drivers\fsl_snvs_lp.c
+      Include file:  drivers\fsl_snvs_lp.h
 
    * Component: NXP::Device:SDK Drivers:src:2.0.1
-      Source file:   drivers\fsl_src.c
       Include file:  drivers\fsl_src.h
+      Source file:   drivers\fsl_src.c
 
    * Component: NXP::Device:SDK Drivers:xbara:2.0.4
       Source file:   drivers\fsl_xbara.c
@@ -269,24 +288,24 @@ Package Vendor: NXP
       Source file:   utilities\fsl_assert.c
 
    * Component: NXP::Device:SDK Utilities:debug_console:1.0.0
-      Source file:   utilities\debug_console\fsl_debug_console.c
-      Include file:  utilities\debug_console\fsl_debug_console.h
-      Include file:  utilities\str\fsl_str.h
       Include file:  utilities\debug_console\fsl_debug_console_conf.h
       Source file:   utilities\str\fsl_str.c
+      Include file:  utilities\str\fsl_str.h
+      Source file:   utilities\debug_console\fsl_debug_console.c
+      Include file:  utilities\debug_console\fsl_debug_console.h
 
    * Component: NXP::Device:SDK Utilities:notifier:1.0.0
       Source file:   utilities\fsl_notifier.c
       Include file:  utilities\fsl_notifier.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager:1.0.0
-      Include file:  components\serial_manager\serial_port_internal.h
-      Source file:   components\serial_manager\serial_manager.c
       Include file:  components\serial_manager\serial_manager.h
+      Source file:   components\serial_manager\serial_manager.c
+      Include file:  components\serial_manager\serial_port_internal.h
 
    * Component: NXP::Device:SDK Utilities:serial_manager_uart:1.0.0
-      Include file:  components\serial_manager\serial_port_uart.h
       Source file:   components\serial_manager\serial_port_uart.c
+      Include file:  components\serial_manager\serial_port_uart.h
 
    * Component: NXP::Device:SDK Utilities:shell:1.0.0
       Source file:   utilities\fsl_shell.c
@@ -294,12 +313,12 @@ Package Vendor: NXP
 
    * Component: NXP::Device:Startup:MIMXRT1052_startup:1.0.0
       Source file:   arm\startup_MIMXRT1052.s
-      Include file:  MIMXRT1052.h
       Include file:  MIMXRT1052_features.h
       Include file:  fsl_device_registers.h
+      Include file:  MIMXRT1052.h
       Source file:   system_MIMXRT1052.c
       Include file:  system_MIMXRT1052.h
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
